# zerobounce-rust-api

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  README_es.md  SECURITY.md  documentation.md  documentation_es.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  publish.yml  sdk_ci.yml
examples/: activity_data.rs  ai_scoring.rs  api_usage.rs  batch_validate.rs  bulk_validation.rs  config_options.rs  domain_search.rs  domain_search_v2.rs  find_email_v2.rs  find_mail.rs  get_credits.rs
src/: lib.rs  utility.rs
src/api/: bulk.rs  mod.rs  validation.rs
src/utility/: bulk_get_file.rs  mock_constants.rs  mod.rs  structures.rs
src/utility/structures/: bulk.rs  custom_deserialize.rs  generic.rs  mod.rs  validate_enums.rs  validation.rs
src/validation/: mod.rs
tests/: generic-endpoints.rs  mod.rs
tests/bulk/: ai_scoring.rs  mod.rs  validation.rs
tests/common/: mod.rs
tests/generic_endpoints/: activity_data.rs  api_usage.rs  domain_search_v2.rs  find_email_v2.rs  find_mail.rs  get_credits.rs  mod.rs  test_activity_data.rs  test_api_usage.rs  test_credits.rs
tests/validation/: batch_validation.rs  mod.rs  simple_validation.rs
