[package]
name = "zero-bounce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
chrono = "0.4.24"
reqwest = { version = "0.11.16", features = ["blocking", "multipart"] }
serde = { version ="1.0.159", features = ["derive"] }
serde_json = "1.0.95"

[dev-dependencies]
mockito = "1.0.2"
